--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "git": "^0.1.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9"
   },
